look at other features

--- a/prelim_explore.ipynb
+++ b/prelim_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "12a25994",
    "metadata": {},
    "outputs": [],
@@ -1476,32 +1476,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "865e6557",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['hour',\n",
-       " 'site_id',\n",
-       " 'site_domain',\n",
-       " 'site_category',\n",
-       " 'app_id',\n",
-       " 'app_domain',\n",
-       " 'app_category',\n",
-       " 'device_id',\n",
-       " 'device_ip',\n",
-       " 'device_model']"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cat_vars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcat_vars\u001b[49m\n\u001b[1;32m      2\u001b[0m cat_vars\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhour\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cat_vars' is not defined"
+     ]
     }
    ],
    "source": [
-    "cat_vars"
+    "cat_vars\n",
+    "cat_vars.remove('hour')"
    ]
   },
   {
@@ -1521,8 +1514,10 @@
     }
    ],
    "source": [
+    "cat_vars\n",
+    "cat_vars.remove('hour')\n",
     "for col in cat_vars:\n",
-    "        sns.barplot(x='site_id', y='click', data=train)\n",
+    "        sns.barplot(x=col, y='click', data=train)\n",
     "        rate = train['click'].mean()\n",
     "        plt.axhline(rate, label = f'Average {target} rate', linestyle='--', color='black')\n",
     "        plt.legend()\n",
