Add final comments

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1062,6 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#determine which categorical columns to be encoded\n",
     "cols_to_encode = ['banner_pos', 'hour_of_day', 'day_of_week']"
    ]
   },
@@ -1072,6 +1073,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#encode and scale data\n",
     "train, validate, test = m.pre_prep(train, validate, test, cols_to_encode, 'click')"
    ]
   },
@@ -1082,6 +1084,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#features to be sent into the model\n",
     "drivers = ['hour_of_day_0','hour_of_day_1','hour_of_day_8','hour_of_day_9',\n",
     "           'hour_of_day_11','hour_of_day_14','hour_of_day_15','hour_of_day_16',\n",
     "           'hour_of_day_18','hour_of_day_19','hour_of_day_20','hour_of_day_21', \n",
@@ -1096,6 +1099,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#final data split for modeling\n",
     "X_train, y_train, X_validate, y_validate, X_test, y_test = m.prep_for_model(train, validate, test, 'click', drivers)"
    ]
   },
@@ -1104,9 +1108,8 @@
    "id": "4c5cec5c",
    "metadata": {},
    "source": [
-    "### Baseline models\n",
-    "* Looked at both using mean and median as a baseline model.\n",
-    "* Mean baseline performed better on the in-sample and out-of sample data SO I went with mean."
+    "### Baseline model\n",
+    "* Baseline was determined by using the percent of the mode of our target variable."
    ]
   },
   {
