Fix spelling mistakes in markdown.

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -892,7 +892,7 @@
    "id": "e6ecd169",
    "metadata": {},
    "source": [
-    "## 5. Do the annoymized continuous features have an impact on click-throughs?"
+    "## 5. Do the anonymized continuous features have an impact on click-throughs?"
    ]
   },
   {
@@ -902,9 +902,9 @@
    "source": [
     "**Set Hypothesis**\n",
     "\n",
-    "$H_0$ = There is no difference in means between each annoymized continuous feature (```C14```-```C21```) for those who click and don't click.\n",
+    "$H_0$ = There is no difference in means between each anonymized continuous feature (```C14```-```C21```) for those who click and don't click.\n",
     "\n",
-    "$H_a$ = There is a difference in means between each annoymized continuous feature (```C14```-```C21```) for those who click and don't click."
+    "$H_a$ = There is a difference in means between each anonymized continuous feature (```C14```-```C21```) for those who click and don't click."
    ]
   },
   {
@@ -1006,7 +1006,7 @@
    "id": "6c5ad321",
    "metadata": {},
    "source": [
-    "**p < alpha for each annoymized continuous feature (```C14```-```C21```), so we can reject the null hypothesis and say there is proabably a difference in means between each annoymized continuous feature (```C14```-```C21```) for those who click and don't click.** "
+    "**p < alpha for each anonymized continuous feature (```C14```-```C21```), so we can reject the null hypothesis and say there is proabably a difference in means between each anonymized continuous feature (```C14```-```C21```) for those who click and don't click.** "
    ]
   },
   {
@@ -1018,7 +1018,7 @@
     "* ```hour_of_day``` (0, 1, 8, 9, 11, 14, 15, 16, 18, 19, 20, 21) probably have a relationship with```clicks```.\n",
     "* Each ```day_of_week``` probably has a relationship with ```click```.\n",
     "* ```banner_pos``` (0, 1, 2, 7) probably have a relationship with ```click```.\n",
-    "* Proabably a difference in means between each annoymized continuous feature (```C14```-```C21```) for those who click and don't click."
+    "* Proabably a difference in means between each anonymized continuous feature (```C14```-```C21```) for those who click and don't click."
    ]
   },
   {
@@ -1312,7 +1312,7 @@
     "* ```hour_of_day``` (0, 1, 8, 9, 11, 14, 15, 16, 18, 19, 20, 21) probably have a relationship with```clicks```.\n",
     "* Each ```day_of_week``` probably has a relationship with ```click```.\n",
     "* ```banner_pos``` (0, 1, 2, 7) probably have a relationship with ```click```.\n",
-    "* Proabably a difference in means between each annoymized continuous feature (```C14```-```C21```) for those who click and don't click.\n",
+    "* Proabably a difference in means between each anonymized continuous feature (```C14```-```C21```) for those who click and don't click.\n",
     "\n",
     "### Recommendations\n",
     "* We need to invest in some cloud computing in order to run statisical tests and models on such large data sets.\n",
